projectsPage.css
*{
    /*box-sizing: border-box;*/
    font-family: "Georgia", Times, Serif;
}

body {
    background-color: #333333;
    /*margin: 4vh;*/
}

.container {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.data{
    width: 73%;
    border-radius: 3px;
    height: 92vh;
    overflow-y: auto;
}

.searchbarContainer {
    width: 250px;
    height: 25px;
    background-color: #DDDDDD;
    border-radius: 3px;
    padding: 9px;
    display: flex;
    align-items: center;
    justify-content: space-around;
}

input{
    border: none;
    outline: none;
    background: none;
}

.glass:hover {
    cursor: pointer;
}

#root {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 20px;
}

.box {
    height: 375px;
    margin: 15px;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #333333;
    /*justify-content: space-between;*/
    border: 1px solid #444444;
    border-radius: 5px;
    padding: all 10px;
    box-shadow: 0 4px 8px 0 #111111;
    transition: 0.3s;
}

.box:hover {
    box-shadow: 0 8px 16px 0 #111111;
}

/*.small .box {
    style='height: 33%; width: 100%; float: left; display: flex; flex-direction: column; overflow: hidden'
}*/

.img-box {
    width: 100%;
    height: 176px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.images {
    max-height: 90%;
    max-width: 90%;
    object-fit: cover;
    object-position: center;
}

.viewButton {
    background-color: #444444;
    border: none;
    border-radius: 5px;
    color: #DDDDDD;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    /*display: inline-block;*/
    font-size: 14px;
    /*margin: all 2px;*/
    cursor: pointer;
}

.viewButton:hover{
    background-color: palegoldenrod;
    color: #111111;
}

/*::-webkit-scrollbar{
    display: none;
}*/

/*.centerButton {
    margin: 0;
    position: relative;
    top: 50%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}*/

.bottom{
    margin-top: 20px;
    width: 100%;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    height: 110px;
    overflow: visible;
}

